# pygit

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  cli.py  commands.py  ignore.py  index.py  objects.py  remotes.py  repo.py  revisions.py
tests/: conftest.py  test_cli_features.py  test_ignore_unit.py
